--- a/devsforumvi/css/cm-theme.css
+++ b/devsforumvi/css/cm-theme.css
@@ -1,6 +1,6 @@
 /* zzCodeMirror for Forumotion */
 dl.codebox,dl.codebox *{-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box}
-dl.codebox{background:transparent;border:0 none}
+dl.codebox{background:transparent;border:0 none;overflow:hidden}
 dl.codebox dd{background:transparent;margin:0;padding:0}
 dl.codebox > dt{margin:0;font-size:1em;text-transform:uppercase;position:relative;background:url(//i83.servimg.com/u/f83/16/58/89/73/page_w10.png) no-repeat scroll 10px center #777;color:#FFF;border:1px solid #e2e2e2;height:30px!important;border-bottom-width:0;line-height:26px!important;padding:2px 10px 0 30px!important}
 dl.codebox dd{background:#FFF;max-height:100%!important;overflow:visible!important;position:relative;border:1px solid #e2e2e2}
@@ -13,14 +13,14 @@ dl.codebox:hover .controlCode{opacity:1}
 .controlCode img.textCode{background-image:url(http://i.imgur.com/gXbPqhr.png)}
 .controlCode img.textCode.pretty{background-image:url(http://i.imgur.com/FJOia1z.png)}
 .controlCode :hover{cursor:pointer;border-color:#FFF}
-pre{counter-reset:linenumber;overflow:auto;margin:0;padding:1em;word-wrap:normal}
+dl.codebox dd.CodemirrorHighlighter{counter-reset:linenumber;overflow:auto!important;margin:0!important;padding:1em!important;word-wrap:normal!important}
 dl.codebox code{color:inherit;display:block;height:100%;max-height:100%;overflow:visible;white-space:pre;margin:0 0 0 3em;padding:0}
 .lineNumber{pointer-events:none;width:3em;letter-spacing:-1px;border-right:1px solid rgba(125,125,125,0.37);float:left;margin-left:-1em}
 dl.codebox code,.lineNumber{font-size:1em !important;line-height:1.3em!important}
 .lineNumber > span{pointer-events:none;display:block;counter-increment:linenumber}
 .lineNumber > span:before{content:counter(linenumber);font-family:monospace;color:#999;display:block;padding-right:.8em;text-align:right}
-.controlCode select.chgStyle{background-image:url(http://i.imgur.com/euxhSeC.png);text-indent:-9999px;text-align:right}
-.controlCode select.chgStyle option{background:none repeat scroll 0 0 transparent;border:0 none;text-indent:0;width:auto;padding:0 5px}
+.controlCode select.CodemirrorStyle{background-image:url(http://i.imgur.com/euxhSeC.png);text-indent:-9999px;text-align:right}
+.controlCode select.CodemirrorStyle option{background:none repeat scroll 0 0 transparent;border:0 none;text-indent:0;width:auto;padding:0 5px}
 /* CodeMirror default theme */
 code .cm-keyword{color:#708}
 code .cm-atom{color:#219}
