Updated postto param

--- a/imgur/css/style.less
+++ b/imgur/css/style.less
@@ -227,14 +227,7 @@ body {
 
 #img_title {
     padding: 6px 10px;
-    width: 420px;
-    .border1px;
-}
-
-#img_type {
-    padding: 5px;
-    width: 145px;
-    float: right;
+    width: 100%;
     .border1px;
 }
 /*! jQuery UI sortable */
