--- a/imgur/css/style.css
+++ b/imgur/css/style.css
@@ -242,14 +242,7 @@ body {
 /* line 228, style.less */
 #img_title {
   padding: 6px 10px;
-  width: 420px;
-  border: 1px solid #DDD;
-}
-/* line 234, style.less */
-#img_type {
-  padding: 5px;
-  width: 145px;
-  float: right;
+  width: 100%;
   border: 1px solid #DDD;
 }
 /*! jQuery UI sortable */
